#API package POC

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,6 @@
-index.file=index.php
-url=http://localhost/ouch_app/
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=/var/www/ouch_app_dingo
+index.file=
+run.as=LOCAL
+url=http://localhost/ouch_app_dingo/
