--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "asahasrabuddhe/laravel-api": "dev-master",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/passport": "^7.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spatie/laravel-query-builder": "^1.10",
+        "cartalyst/stripe-laravel": "8.0.*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
